fix(checkbox): prevent checkbox case from shrinking with narrow container and label overflow

--- a/packages/react/src/components/checkbox/Checkbox.module.scss
+++ b/packages/react/src/components/checkbox/Checkbox.module.scss
@@ -44,6 +44,8 @@
     align-items: center;
     justify-content: center;
     margin: $positive-spacing_050 0;
+    flex: none;
+
 
     &::before {
       content: '';
